force-app/main/default/objects/vlocity_ps__ContractTypeSetting__c/fields/vlocity_ps__ContractType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractType__c</fullName>
    <description>Contract type</description>
    <formula>vlocity_ps__ContractTypeId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>