force-app/main/default/objects/vlocity_ps__ContractTypeSetting__c/fields/vlocity_ps__ContractTypeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractTypeId__c</fullName>
    <description>Contract type identifier</description>
    <label>Contract Type</label>
    <referenceTo>vlocity_ps__ContractType__c</referenceTo>
    <relationshipLabel>Contract Type Settings</relationshipLabel>
    <relationshipName>ContractTypeSettings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>